syntax="proto2";
package Packet;

message Control
{
    enum ShootMode
    {
        KICK = 0;
        CHIP = 1;
    }

    enum TriggerMode
    {
        STAND_DOWN = 0;
        IMMEDIATE = 1;
        ON_BREAK_BEAM = 2;
    }

    enum Song
    {
        STOP = 0;
        CONTINUE = 1;
        FIGHT_SONG = 2;
    }

    required float xVelocity = 1         [default = 0];
    required float yVelocity = 2         [default = 0];
    required float aVelocity = 3         [default = 0];
    required float dVelocity = 4         [default = 0];
    required uint32 kcStrength = 5       [default = 255];
    required ShootMode shootMode = 6     [default = KICK];
    required TriggerMode triggerMode = 7 [default = STAND_DOWN];
    required Song song = 9               [default = CONTINUE];
}

message OtherControls
{
    enum ShootMode
    {
        KICK = 0;
        CHIP = 1;
    }

    enum TriggerMode
    {
        STAND_DOWN = 0;
        IMMEDIATE = 1;
        ON_BREAK_BEAM = 2;
    }

    enum Song
    {
        STOP = 0;
        CONTINUE = 1;
        FIGHT_SONG = 2;
    }

    optional uint32 kcStrength = 1       [default = 255];
    optional ShootMode shootMode = 2     [default = KICK];
    optional TriggerMode triggerMode = 3 [default = STAND_DOWN];
    optional Song song = 4               [default = STOP];
    optional int32 dVelocity = 5;
}

message FloatVelCommands
{
    optional float xVelocity = 1;
    optional float yVelocity = 2;
    optional float wVelocity = 3;
}

message RobotControl
{
    optional FloatVelCommands float_vel_commands = 1;
    optional OtherControls other_controls = 2;
}

message RadioRobotControl
{
    optional IntegerVelCommands integer_vel_commands = 1;
    optional OtherControls other_controls = 2;
}

message IntegerVelCommands
{
    optional sint32 xVelocity = 1;
    optional sint32 yVelocity = 2;
    optional sint32 wVelocity = 3;
}